<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradientegray"
    tools:context="com.example.disce.disce.MainActivity">

    <ImageView
        android:id="@+id/logoMain"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/busca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/busca"
        android:layout_below="@id/logoMain"
        android:textSize="@dimen/tamano"
        android:layout_centerHorizontal="true"
        />



    <Button
        android:id="@+id/assistir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assistir"

        android:layout_below="@id/busca"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/buscamaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscarmaterial"

        android:layout_below="@id/assistir"
        android:layout_centerHorizontal="true"
        />




</RelativeLayout>
